--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-graphql": "^4.25.11",
     "@strapi/plugin-i18n": "4.25.11",
     "@strapi/plugin-users-permissions": "4.25.11",
+    "@strapi/provider-upload-cloudinary": "^5.4.1",
     "@strapi/strapi": "4.25.11",
     "@swc/core": "^1.7.36",
     "pg": "8.8.0",
